tests/neg/i4820.scala
class Foo[A]
class Bar[A] extends Foo  // error
